--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,8 +261,15 @@ body {
   margin-top: 50px;
 }
 
-.content-footer p {
+/* .content-footer a{
+
+} */
+.content-footer a {
+  display: block;
   font-size: 14px;
+  margin-top: 15px;
+  color: black;
+  text-decoration: none;
 }
 
 .sub-footer {
@@ -282,9 +289,9 @@ body {
 
 @media (max-width: 767.98px) {
 
-  .img1-about {
+  /* .img1-about {
     display: none;
-  }
+  } */
 
   .img2-about {
     display: none;
